--- a/trial.ipynb
+++ b/trial.ipynb
@@ -44,10 +44,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 6, 10, 15, 21, 28, 36, 45, 55, 66, 78, 91, 105, 120, 136, 153, 171, 190, 210, 231, 253, 276, 300, 325, 351]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tot= 0\n",
+    "tr_num =[]\n",
+    "for i in range (1,26+1):\n",
+    "    tot +=i\n",
+    "    tr_num.append(tot)\n",
+    "print(tr_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d"
+   ]
   }
  ],
  "metadata": {
